@@ -1,3 +1,7 @@
+2007-07-30 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b98
+
+ * Fix: It was possible to bypass the voting permission.
+
 2007-07-28 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b97
 
  * Fix: GR needs the user Agent. Now GR works again.
